added loading=lazy to img tags to improve performance on slower connections

--- a/actions/occupylondon.html
+++ b/actions/occupylondon.html
@@ -54,35 +54,35 @@
         <div class="project-gallery-content">
 
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_1.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_1.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Tech Team's hidden Lab (Bank of Ideas)</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_2.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_2.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Logo</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_3.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_3.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Tech Projection Mapping on St Pauls Cathedral</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_4.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_4.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Tech Team (inside the tech tent)</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_5.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_5.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Tech Team (inside the tech tent)</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_6.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_6.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Tech Team (inside the tech tent)</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_7.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_7.jpg" class="gallery-image">
               <span class="image-caption">Occupy London, Bank of Ideas: Front of Building</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_8.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_8.jpg" class="gallery-image">
               <span class="image-caption">Occupy London Tech outside St Pauls Cathedral (before the tech tent)</span>
             </div>
         </div>
