--- a/actions/ucloccupation.html
+++ b/actions/ucloccupation.html
@@ -58,15 +58,15 @@
             <div class="subheader-text">Image Gallery</div>
             <div class="project-gallery-content">
               <div class="gallery-image-container half-width">
-                <img src="../assets/images/code.jpeg" class="gallery-image">
+                <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
                 <span class="image-caption">Give your image a caption. People love context.</span>
               </div>
               <div class="gallery-image-container half-width">
-                <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
+                <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
                 <span class="image-caption">Give your image a caption. People love context.</span>
               </div>
               <div class="gallery-image-container">
-                <img src="../assets/images/camera.jpeg" class="gallery-image">
+                <img loading="lazy" src="../assets/images/camera.jpeg" class="gallery-image">
                 <span class="image-caption">Give your image a caption. People love context.</span>
               </div>
             </div>
