--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
       <!-- PORTFOLIO HEADER -->
       <div id="portfolio-header">
         <div id="portfolio-header-image-container">
-          <img src="./assets/images/sam.jpg" class="portfolio-header-image">
+          <img loading="lazy" src="./assets/images/sam.jpg" class="portfolio-header-image">
           <span class="image-caption">Sam in 2022</span>
         </div>
         <div id="portfolio-header-text-container">
@@ -151,7 +151,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
         <span class="subheader-text">Projects I have worked on:</span>
         <div class="projects-container">
           <div class="project-card">
-            <img src="./assets/images/animachine_2.jpeg" class="project-image">
+            <img loading="lazy" src="./assets/images/animachine_2.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">#Animachine</div>
               <div class="body-text project-card-text">Participative Digital Fabrication for Endangered Species Conservation.</div>
@@ -162,7 +162,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/20140724_153555.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/20140724_153555.jpg" class="project-image">
             <div class="subheader-text project-title">Electronic Medical Records</div>
             <div class="body-text project-card-text">Solar-Powered HF Radio-Synchronised Electronic Medical Records and Communication Network Deployed in 'extremely remote' Health Clinics and Hospitals around Lake Tanganyika. <n /div>
             </div>
@@ -172,7 +172,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/sukey_app.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/sukey_app.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Sukey</div>
               <div class="body-text project-card-text">Keeping protesters mobile and informed during protests. Languages: php, html, js, css.</div>
@@ -183,7 +183,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/SAMBiOtechie.png" class="project-image">
+            <img loading="lazy" src="./assets/images/SAMBiOtechie.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">EcoVillage</div>
               <div class="body-text project-card-text">Practising voluntary minimalism, learning about forest ecology, community living, permaculture, medicinal and edible herbs. Forest bathing.</div>
@@ -194,7 +194,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/20140726_175001.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/20140726_175001.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Writings</div>
               <div class="body-text project-card-text">My mind to your mind, my thoughts to your thoughts. Heart through mind.</div>
@@ -205,7 +205,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/20140726_175001.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/20140726_175001.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Readings</div>
               <div class="body-text project-card-text">The thoughts of others, encoded in words, are shared here</div>
@@ -216,7 +216,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/occupy_6.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/occupy_6.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Occupy London: Tech Team</div>
               <div class="body-text project-card-text">Occupy London was a political movement in London.</div>
@@ -227,7 +227,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/Cryptoparty.png" class="project-image">
+            <img loading="lazy" src="./assets/images/Cryptoparty.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Cryptoparty London</div>
               <div class="body-text project-card-text">Grassroots, global endeavour to introduce the basics of practical cryptography such as the Tor, PGP, OTR, disk encryption and VPNs to the general public.</div>
@@ -238,7 +238,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/ucloccupation_com.png" class="project-image">
+            <img loading="lazy" src="./assets/images/ucloccupation_com.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">UCLOccupation</div>
               <div class="body-text project-card-text">Bootstrapped the tech team at a student occupation (which became a hub of a national movement) together with other fellow nerds, students and volunteers.</div>
@@ -249,7 +249,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/XBee-2-mW.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/XBee-2-mW.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Building Banter</div>
               <div class="body-text project-card-text">Improving energy efficiency through ‘conversing’ with buildings and users in an engaging manner".</div>
@@ -260,7 +260,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/classic4.jpg" class="project-image">
+            <img loading="lazy" src="./assets/images/classic4.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Classic 4</div>
               <div class="body-text project-card-text">Electro Accupuncture / TENS Device. Classic 4 @ Harmony Medical. Languages: c, cpp, asm, python.</div>
@@ -271,7 +271,7 @@ HoomanBean(w/ Voice), Engineer, Entrepreneur, H4ck3r, Gardener
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/nanode.png" class="project-image">
+            <img loading="lazy" src="./assets/images/nanode.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Nanode</div>
               <div class="body-text project-card-text">An open source Arduino-like board that has in-built web connectivity. Best Internet of Things Open Source Project 2011.</div>
