--- a/projects/animachine.html
+++ b/projects/animachine.html
@@ -55,47 +55,47 @@
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_1.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_1.jpeg" class="gallery-image">
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_2.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_2.jpeg" class="gallery-image">
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_3.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_3.jpeg" class="gallery-image">
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_4.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_4.jpeg" class="gallery-image">
               <span class="image-caption">Cat-Ba Langur 3D model finished printing.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_5.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_5.jpeg" class="gallery-image">
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_6.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_6.jpg" class="gallery-image">
               <span class="image-caption">Animachine Installation - Participative Digital Fabrication for Endangered Species Conservation. Printing in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_7.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_7.jpg" class="gallery-image">
               <span class="image-caption">Cat-Ba Langur</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_8.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_8.jpg" class="gallery-image">
               <span class="image-caption">The 3d printed sculptures, modelled by artist Sam3, were auctioned with all proceeds donated towards Cat-Ba Langur conservation.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_9.png" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_9.png" class="gallery-image">
               <span class="image-caption">Jan and I deploying/setting up the system in Alexa Shopping Centre, Berlin.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_10.png" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_10.png" class="gallery-image">
               <span class="image-caption">Jan firing up the Python code I wrote to automate the control of the 3D printer and pause and resume printing based on watching for "#animachine" hashtags in tweets via the REST API from Twitter.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/animachine_11.png" class="gallery-image">
+              <img loading="lazy" src="../assets/images/animachine_11.png" class="gallery-image">
               <span class="image-caption">Jan closing up the service panel hiding the computer, UPS (backup power supply), and UMTS modem.</span>
             </div>
         </div>
