--- a/projects/buildingbanter.html
+++ b/projects/buildingbanter.html
@@ -55,7 +55,7 @@
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/XBee-2-mW.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/XBee-2-mW.jpg" class="gallery-image">
               <span class="image-caption">XBee 2mW used for the Wireless Sensor Network</span>
             </div>
         </div>
