--- a/projects/ltfhc.html
+++ b/projects/ltfhc.html
@@ -97,195 +97,195 @@
         <div class="subheader-text">My Project Build Photos</div>
         <div class="project-gallery-content">
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/IMG_20140618_144038802.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/IMG_20140618_144038802.jpg" class="gallery-image">
               <span class="image-caption">My original system diagram showing the connections between all the modules.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140619_160303.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140619_160303.jpg" class="gallery-image">
               <span class="image-caption">Mini computer with the case off.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140724_153546.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140724_153546.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_174924.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_174924.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140619_160345.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140619_160345.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140724_153549.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140724_153549.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_175001.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_175001.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140711_202527.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140711_202527.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140724_153555.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140724_153555.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_175018.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_175018.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140711_202531.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140711_202531.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140724_153615.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140724_153615.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_175032.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_175032.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140711_202539.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140711_202539.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140725_000149.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140725_000149.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_023530.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_023530.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140711_202545.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140711_202545.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140725_000416.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140725_000416.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_023536.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_023536.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140718_183825.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140718_183825.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140725_000457.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140725_000457.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_023539.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_023539.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140718_183844.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140718_183844.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140725_200802.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140725_200802.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_023734.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_023734.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140718_183848.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140718_183848.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025814.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025814.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_023747.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_023747.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140718_183902.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140718_183902.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025828.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025828.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_135101.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_135101.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140718_183926.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140718_183926.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025833.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025833.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_135104.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_135104.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140722_005204.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140722_005204.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025849.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025849.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_135113.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_135113.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140722_005310.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140722_005310.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025858.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025858.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_135119.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_135119.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140722_005317.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140722_005317.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025903.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025903.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_135127.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_135127.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140724_153542.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140724_153542.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025905.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025905.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140728_135132.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140728_135132.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140724_153544.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140724_153544.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/20140726_025907.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/20140726_025907.jpg" class="gallery-image">
               <span class="image-caption">LTFHC Build Photos</span>
             </div>
         </div>
