--- a/service/security.html
+++ b/service/security.html
@@ -70,39 +70,39 @@ Security Risk Assessment: conduct comprehensive assessments on your company's di
           <div class="subheader-text">Image Gallery</div>
           <div class="project-gallery-content">
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/lqdn.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/lqdn.jpg" class="gallery-image">
               <span class="image-caption"><3 to LQDN. My favourite t-shirt</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/tf_hw.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/tf_hw.jpg" class="gallery-image">
               <span class="image-caption">Full stack: Software. Hardware. Networking. Solar. Encrypted Data Sync over HF Radio. OTA Updates via UMTS / or LAN where available. Rugged. Ultra-remote deployment. Security principles applied throughout the design. Complex system design, integration, building and testing.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ccc_camp.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ccc_camp.jpg" class="gallery-image">
               <span class="image-caption">CCC Summer Camp</span>
             </div>                        
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_boi.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_boi.jpg" class="gallery-image">
               <span class="image-caption">OccupyLSX NOC, Bank of Ideas</span>
             </div>                        
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/hacker_bbq.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/hacker_bbq.jpg" class="gallery-image">
               <span class="image-caption">Hacker BBQ. Macs *are* useful after all!</span>
             </div>            
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_1.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_1.jpg" class="gallery-image">
               <span class="image-caption">OccupyLSX Tech</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_8.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_8.jpg" class="gallery-image">
               <span class="image-caption">OccupyLSX Tech, first days</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_4.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_4.jpg" class="gallery-image">
               <span class="image-caption">OccupyLSX Tech, some friends from the internet are here</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/occupy_6.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/occupy_6.jpg" class="gallery-image">
               <span class="image-caption">OccupyLSX Tech, St Pauls</span>
             </div>            
           </div>
