--- a/actions/ecovillage.html
+++ b/actions/ecovillage.html
@@ -35,15 +35,20 @@
       <div id="project-header">
 
         <div class="main-title">Ecovillage</div>
-        <div class="body-text">Imagine living on the top of a hill in a garden full of food, herbs and other useful and beautiful species situated in a forest (and you are allowed to sleep there). Welcome to Ecovillage life.</div>
+        <div class="body-text">Imagine living on the top of a hill in a garden full of food, herbs and other useful and beautiful species situated in a forest (and you are allowed to sleep there). Welcome to Eco-village life.</div>
         <image class="project-header-image" src="../assets/images/SAMBiOtechie.png">
       </div>
-
-
       <div id="project-details">
         <div class="subheader-text">Project Details / Background</div>
         <div class="project-details-content">
           <div class="body-text"><div class="subheader-text">Eco-Village Life</div>
+<div class="body-text">
+It was an immersive, deep dive, into eco-village life, learning by doing and collaborating with others also on their journey to becoming practical in everyday life in a forest. I learned about minimum interference management and other regenerative practices, autonomous DIY systems for heating homes and larger communal spaces, hot water, drinking water, energy generation and storage, thermal mass, upcycling / adaptation of resources from the city. We recycled absolutely everything. For example we have our own natural water recycling system, a wood and clay sauna, a clay pizza oven, clay rocket stoves, we harvest our own wood from our own managed forests for fuel and for building materials for our projects and our homes- many of which where built from recycled materials combined with natural, local, materials namely wood and clay. Permaculture was the norm and there was a lot of knowledge about the medicinal properties of plants, we even had our own communal apothecary. Very magical.
+<image src="../assets/images/ironage.jpg" style="float: right; height: 300px; width: 400px; margin-left: 20px; margin-bottom: 20px;"> 
+<br>
+<br>
+Having lived in a city for most of my early life I was, at that time, overweight, suffered from allergies and had asthma and constantly over-stimulated but somehow under-nourished, there was something missing. 30 years later, after having recently left the eco village I no longer have any of those imbalances, my biomes had finally healed. My simple advice therefore would be to take time in your life to destimulate and for forest bathing and going slowly and connecting with nature. Also I would highly encourage anyone to learn how to safely forage and to grow their own food. As I slowly realised, over the course of my life, that nature was a bigger computer with its own 'internet of mycelium' interfacing with the roots of the plants, I had a new complex system to learn. Plants are, in fact, the self-replicators that Von Neumann had always dreamed of. The magic of trees and also of smaller plants: absorbing the ions they need from the soil and fixing carbon from the air and synergistically sharing excess carbon through their roots and the mycelial network... *and* you can even eat some of them *and* they have different nutritional profiles and some even have healing properties! Let thy food by thy medicine and thy medicine by thy food, there was no going back, I fell in love and became totally fascinated.
+</div>
 <div class="body-text">
 <image src="../assets/images/SAMBiOtechie.png" style="float: left; height: 300px; width: 284px; margin-right: 20px; margin-bottom: 20px;">
 Dreaming: in winter I love the peace and stillness of the forest and being cosy at home with the wood stove burning, some nettle tea and plenty to read and lots of time to go slowly, regenerate and sleep.<br><br>
@@ -53,9 +58,6 @@ Doing: in summer I love hosting guests in my garden for tea, music and discussio
 Celebrating: In autumn comes the main harvest and with a bit of rain and bit of luck, I love getting lost in the woods on long afternoons hunting for mushrooms.
 <br><br>
 There is nothing quite like sitting with good friends in a beautiful wild garden sipping locally-grown/foraged herbal tea. I love foraging to make wild salads and growing my own herbs and vegetables. I have even had the pleasure and the privelege to looking after chickens, horses and a donkey. In a few words: Radical Self-Sustainability and Biophilia.
-<br>
-<br>
-It was an immersive, deep dive, into eco-village living becoming practical in everyday life in a forest. I learned about minimum interference management and other regenerative practices, autonomous DIY systems for heating, hot water, driking water, energy collection and upcycling / adaptation of resources from the city. We recycled absolutely everything. For example we have our own natural water recycling system, a wood and clay sauna, a clay pizza oven, clay rocket stoves, we harvest our own wood from our own managed forests for fuel and for building materials for our projects and our homes- many of which where built from recycled materials combined with natural, local, materials namely wood and clay. Permaculture was the norm and there was a lot of knowledge about the medicinal properties of plants, we even had our own communal apothecary. Very magical.
 <br>
 <br>
 Surrounded by a community which fostered camaraderie while celebrating individuality and diversity everyone was encouraged to try out their ideas for alternative living ranging from unique gardens to solar kitchens and from tipis to iron-age roundhouses and even a few small geodesic domes and cob houses. There were also seasonal social occasions such as communal harvesting of apples and potatoes and also regular full moon pizza parties. As well as being practical, many of the people living there were musically talented and there was a large hall for music and cultural events.
@@ -82,15 +84,15 @@ With a bit of space and freedom we can all take a more wholistic approach to mee
         <div class="project-gallery-content">
 
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/code.jpeg" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/sketchbook.jpeg" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/camera.jpeg" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
         </div>
