--- a/projects/ose.html
+++ b/projects/ose.html
@@ -48,51 +48,51 @@ I was able to participate at the Open Source Ecology Project remotely online via
           <div class="subheader-text">Photos: OSE Factor E Farm</div>
           <div class="project-gallery-content">
             <div class="gallery-image-container">
-              <img src="../assets/images/ose_backhoe.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_backhoe.jpg" class="gallery-image">
               <span class="image-caption">I contributed some CAD to the wiki for the first version of the backhoe arm and the team at OSE made a prototype which I got to see for the first time upon arrival at the farm for my dedicated project visit (DPV).</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/ose_torchtable.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_torchtable.jpg" class="gallery-image">
               <span class="image-caption">The subject of my dedicated project visit (DPV): further development of the CNC Torch Table</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ose_endstop_mount.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_endstop_mount.jpg" class="gallery-image">
               <span class="image-caption">I designed and fitted a 3D printed mount with a trapped nut for an endstop circuit which was then securely attached to the metal X and Y axes of the CNC torch table.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/Ose-cnc-torch-table-endstop-y-min.png" class="gallery-image">
+              <img loading="lazy" src="../assets/images/Ose-cnc-torch-table-endstop-y-min.png" class="gallery-image">
               <span class="image-caption">Rendering of my CAD for the y-min endstop mount</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ose_endstop.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_endstop.jpg" class="gallery-image">
               <span class="image-caption">I tested the endstop circuit with an arduino to ensure that the hardware was still working and soldered correctly and to see if it was configured as normally open (NO) or normally closed (NC).</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/ose_trencher.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_trencher.jpg" class="gallery-image">
               <span class="image-caption">While I was there the rest of the team was working on a protoype of the Trencher which attaches to the front of the LifeTrac (open source tractor).</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/ose_3dp_area.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_3dp_area.jpg" class="gallery-image">
               <span class="image-caption">I did a complete overhaul of the communal design space inside the hablab (guest accomodation) which included fixing all the 3d printers (4 in total) and networking them to allow management of prints from a printserver (octoprint).</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ose_bucky.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_bucky.jpg" class="gallery-image">
               <span class="image-caption">I built a small geodesic dome using wooden dowl rods and 3d printed vertices. There are multiple intentions fulfilled by printing this particular assembly / object: as an art installation and a decoration to inspire, as an engineering example of how the 3d printers can be used to make assemblies and prototypes (scale models). A Buckminster Fuller geodesic dome is a useful engineering teaching example because it demonstrates how to efficiently enclose space using lightweight, strong, and cost-effective materials. The design of the dome relies on triangular elements that distribute stress evenly across the structure. This results in an incredible strength-to-weight ratio and self-supporting properties. Geodesic domes are also energy-efficient due to their spherical shape, which optimizes air circulation and reduces heat loss. Additionally, they can withstand extreme weather conditions like high winds and heavy snow loads due to their aerodynamic shape. Overall, studying geodesic domes provides valuable insights into structural mechanics, material science, sustainability practices in engineering, as well as architectural innovation for creating efficient spaces with minimal impact on resources.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ose_mason.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_mason.jpg" class="gallery-image">
               <span class="image-caption">I upgraded some of the old mason jars in the kitchen with 3D printed handles to leave some more 'art objects' around the house with the intention to inspire future volunteers.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ose_circuitclamp.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_circuitclamp.jpg" class="gallery-image">
               <span class="image-caption">A multi part assembly which is perfect for holding circuit boards while you solder them.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/ose_cleat.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_cleat.jpg" class="gallery-image">
               <span class="image-caption">Some more upgrades for the hablab guesthouse. A cleat.</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/ose_kanban.jpg" class="gallery-image">
+              <img loading="lazy" src="../assets/images/ose_kanban.jpg" class="gallery-image">
               <span class="image-caption">All of my completed tasks from the Kanban board.</span>
             </div>
           </div>
