--- a/projects/sukey.html
+++ b/projects/sukey.html
@@ -130,7 +130,7 @@
         <div class="subheader-text">Image Gallery</div>
         <div class="project-gallery-content">
           <div class="gallery-image-container half-width">
-            <img src="../assets/images/sukey_1.png" class="gallery-image">
+            <img loading="lazy" src="../assets/images/sukey_1.png" class="gallery-image">
             <span class="image-caption">The Original Sukey.org website- FAQ Page</span>
           </div>
         </div>
